--- a/.github/workflows/simple.yml
+++ b/.github/workflows/simple.yml
@@ -12,6 +12,10 @@ jobs:
         run: |
           node -v
           npm -v
-        
+      - name: run python
+        run: |
+          import platform
+          print(platform.processor())
+        shell: python
 
     
