--- a/.github/workflows/simple.yml
+++ b/.github/workflows/simple.yml
@@ -17,5 +17,13 @@ jobs:
           import platform
           print(platform.processor())
         shell: python
+  run-powershell-commands:
+    runs-on: windows-latest
+    steps:
+      - name: powershell directlry
+        run: Get-Location
+      - name: Bash Doreectory
+        run: pwd
+        shell: bash
 
     
