--- a/.github/workflows/simple.yml
+++ b/.github/workflows/simple.yml
@@ -1,6 +1,14 @@
 name: Shell Commands
 
-on: [push]
+#on: [push, pull_request]
+on: 
+# push:
+#  schedule:
+#    - cron: "* * * * *"
+#  repository_dispatch: 
+#    types: [build]
+  pull_request:
+    types: [closed, open, assigned, reopened]
 
 jobs:
   run-shell-commands:
