--- a/.github/workflows/env.yml
+++ b/.github/workflows/env.yml
@@ -9,7 +9,7 @@ jobs:
   log_env:
     env:
       JOB_ENV: Available to al steps of this job
-    runs_on: ubuntu-latest
+    runs-on: ubuntu-latest
     steps:
       - name: Log ENV Variables
         env:
