--- a/.github/workflows/env.yml
+++ b/.github/workflows/env.yml
@@ -4,6 +4,7 @@ on: push
 
 env:
   WF_ENV: Available to all jobs
+  SECRET_ENV: ${{ secrets.SECRET_ENV }}
 
 jobs:
   log_env:
@@ -18,4 +19,5 @@ jobs:
           echo "WF_ENV: ${WF_ENV}"
           echo "JOB_ENV: ${JOB_ENV}"
           echo "STEP_ENV: ${STEP_ENV}"
+          echo "SECRET_ENV: ${SECRET_ENV}"
       
