--- a/.github/workflows/env.yml
+++ b/.github/workflows/env.yml
@@ -7,6 +7,22 @@ env:
   SECRET_ENV: ${{ secrets.SECRET_ENV }}
 
 jobs:
+  create_issue:
+    runs-on: ubuntu-latest 
+    permissions:
+      issues: write 
+    steps:
+      - name: Create issue using REST API
+        run: |
+          curl --request POST \
+          --url https://api.github.com/repos/${{ github.repository }}/issues \
+          --header 'authorization: Bearer ${{ secrets.GITHUB_TOKEN }}' \
+          --header 'content-type: application/json' \
+          --data '{
+            "title": "Automated issue for commit: ${{ github.sha }}",
+            "body": "This issue was automatically created by the GitHub Action workflow **${{ github.workflow }}**. \n\n The commit hash was: _${{ github.sha }}_."
+            }' \
+          --fail
   log_env:
     env:
       JOB_ENV: Available to al steps of this job
