--- a/.github/workflows/env.yml
+++ b/.github/workflows/env.yml
@@ -12,6 +12,26 @@ jobs:
     permissions:
       issues: write 
     steps:
+      - name: push a ranndom file
+        run: |
+          pwd
+          ls -a
+          git init
+          git remote add origin "https://$GITHUB_ACTOR:${{
+          secrets.GITHUB_TOKEN}}@github.com/
+          $GITHUB_REPOSITORY"
+          git config --global user.email "mybot.com"
+          git config --global user.name "mybot"
+          git fetch
+          git checkout main
+          git branch --set-upstream-to=origin/master
+          git pull
+          ls -a
+          echo $RANDOM >> random.txt
+          git add -A
+          git commit -m "random file"
+          git push
+          ls -a
       - name: Create issue using REST API
         run: |
           curl --request POST \
