--- a/.github/workflows/env.yml
+++ b/.github/workflows/env.yml
@@ -17,9 +17,7 @@ jobs:
           pwd
           ls -a
           git init
-          git remote add origin "https://$GITHUB_ACTOR:${{
-          secrets.GITHUB_TOKEN}}@github.com/
-          $GITHUB_REPOSITORY"
+          git remote add origin "https://$GITHUB_ACTOR:${{ secrets.GITHUB_TOKEN }}@github.com/$GITHUB_REPOSITORY"
           git config --global user.email "mybot.com"
           git config --global user.name "mybot"
           git fetch
