--- a/.github/workflows/env.yml
+++ b/.github/workflows/env.yml
@@ -12,12 +12,12 @@ jobs:
     permissions:
       issues: write 
     steps:
-      - name: push a ranndom file
+      - name: push a random file
         run: |
           pwd
           ls -a
           git init
-          git remote add origin "https://$GITHUB_ACTOR:${{ secrets.GITHUB_TOKEN }}@github.com/$GITHUB_REPOSITORY"
+          git remote add origin "https://$GITHUB_ACTOR:${{ secrets.GITHUB_TOKEN }}@github.com/$GITHUB_REPOSITORY.git"
           git config --global user.email "mybot.com"
           git config --global user.name "mybot"
           git fetch
