github action wf

--- a/.github/workflows/env.yml
+++ b/.github/workflows/env.yml
@@ -28,7 +28,7 @@ jobs:
           echo $RANDOM >> random.txt
           git add -A
           git commit -m "random file"
-          git push
+          git push -u origin HEAD
           ls -a
       - name: Create issue using REST API
         run: |
