github action wf

--- a/.github/workflows/env.yml
+++ b/.github/workflows/env.yml
@@ -7,6 +7,18 @@ env:
   SECRET_ENV: ${{ secrets.SECRET_ENV }}
 
 jobs:
+  decrypt_file:
+    runs-on: ubuntu-latest
+    steps:
+      - name: decrypt the secret file
+      - uses: actions/checkout@v1
+        run: gpg --quiet --batch --yes --decrypt --passphrase="$GPG_PASSPHRASE" --output="$HOME/secret.json" secret.json.gpg
+      - env: 
+          GPG_PASSPHRASE: ${{ secrets.GPG_PASSPHRASE }}
+      
+      - name: printing the output of the secret file
+        run: cat $HOME/secret.json
+             
   create_issue:
     runs-on: ubuntu-latest 
     permissions:
@@ -18,6 +30,8 @@ jobs:
           ls -a
           git init
           git remote add origin "https://$GITHUB_ACTOR:${{ secrets.GITHUB_TOKEN }}@github.com/$GITHUB_REPOSITORY.git"
+          git config --global user.email "mybot.com"
+          git config --global user.name "mybot"
           git fetch
           git checkout main
           git branch --set-upstream-to=origin/main
