github action wf

--- a/.github/workflows/env.yml
+++ b/.github/workflows/env.yml
@@ -13,7 +13,7 @@ jobs:
       - name: decrypt the secret file
       - uses: actions/checkout@v1
         run: gpg --quiet --batch --yes --decrypt --passphrase="$GPG_PASSPHRASE" --output="$HOME/secret.json" secret.json.gpg
-      - env: 
+        env: 
           GPG_PASSPHRASE: ${{ secrets.GPG_PASSPHRASE }}
       
       - name: printing the output of the secret file
