github action wf

--- a/.github/workflows/matrix.yml
+++ b/.github/workflows/matrix.yml
@@ -4,7 +4,7 @@ on: push
 
 jobs:
   node-version:
-    runs_on: ubuntu-latest
+    runs-on: ubuntu-latest
     steps:
       - name: Log node version
         run: node -v
