--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -12,13 +12,13 @@ jobs:
           node -v
           cat /etc/os-release
       - name: run with docker container
-        uses: node:13.5.0-alpine3.10
+        uses: docker://node:13.5.0-alpine3.10
         with: 
           entrypoint: '/bin/echo'
           args: "Hello World"
       - uses: actions/checkout@v1
       - name: run script
-        uses: node:13.5.0-alpine3.10
+        uses: docker://node:13.5.0-alpine3.10
         with: 
           entrypoint: './script.sh'
           args: "yoyo"
