github action wf

--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -20,7 +20,7 @@ jobs:
       - name: run script
         uses: docker://node:13.5.0-alpine3.10
         with: 
-          entrypoint: './script.sh'
+          entrypoint: ./script.sh
           args: "yoyo"
         
   node-docker:
