--- a/.github/workflows/context.yml
+++ b/.github/workflows/context.yml
@@ -4,9 +4,9 @@ on: [push, pull_request]
 
 jobs:
   one:
-    runs-on: ubuntu-latest
+    runs-on: poc-custom-runner
     timeout-minutes: 360
-    if: github.event_name == 'push' # the job will run oly if the event type is push 
+    if: github.event_name == 'push' # the job will run only if the event type is push 
     steps:
       - name: Dump GitHub context
         env:
