--- a/.github/workflows/env.yml
+++ b/.github/workflows/env.yml
@@ -8,7 +8,7 @@ env:
 
 jobs:
   decrypt_file:
-    runs-on: ubuntu-latest
+    runs-on: poc-custom-runner
     steps:
       - uses: actions/checkout@v1
       - name: decrypt the secret file
@@ -19,7 +19,7 @@ jobs:
         run: cat $HOME/secret.json
              
   create_issue:
-    runs-on: ubuntu-latest 
+    runs-on: poc-custom-runner 
     permissions:
       issues: write 
     steps:
