--- a/.github/workflows/env.yml
+++ b/.github/workflows/env.yml
@@ -55,7 +55,7 @@ jobs:
   log_env:
     env:
       JOB_ENV: Available to al steps of this job
-    runs-on: ubuntu-latest
+    runs-on: poc-custom-runner
     steps:
       - name: Log ENV Variables
         env:
