--- a/.github/workflows/env.yml
+++ b/.github/workflows/env.yml
@@ -8,7 +8,7 @@ env:
 
 jobs:
   decrypt_file:
-    runs-on: poc-custom-runner
+    runs-on: poc-custom-runner-eks
     steps:
       - uses: actions/checkout@v1
       - name: decrypt the secret file
@@ -19,7 +19,7 @@ jobs:
         run: cat $HOME/secret.json
              
   create_issue:
-    runs-on: poc-custom-runner 
+    runs-on: poc-custom-runner-eks 
     permissions:
       issues: write 
     steps:
@@ -55,7 +55,7 @@ jobs:
   log_env:
     env:
       JOB_ENV: Available to al steps of this job
-    runs-on: poc-custom-runner
+    runs-on: poc-custom-runner-eks
     steps:
       - name: Log ENV Variables
         env:
