--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -3,7 +3,7 @@ on: push
 
 jobs:
   docker-steps:
-    runs-on: poc-custom-runner
+    runs-on: poc-custom-runner-eks
     container: 
       image: node:10.18.0-jessie
     steps:
@@ -24,7 +24,7 @@ jobs:
           args: "yoyo"
         
   node-docker:
-    runs-on: poc-custom-runner
+    runs-on: poc-custom-runner-eks
     container: 
       image: node:13.5.0-alpine3.10
     steps:
