--- a/.github/workflows/context.yml
+++ b/.github/workflows/context.yml
@@ -37,8 +37,14 @@ jobs:
         env:
           MATRIX_CONTEXT: ${{ toJSON(matrix) }}
         run: echo "$MATRIX_CONTEXT"
+      - name: remove old files
+        run: rm *
       - name: make file
         run: mkdir testfile1.txt
+      - name: List files after checkout
+        run: |
+          pwd
+          ls -a
   two:
     runs-on: poc-custom-runner-eks
     if: github.event_name == 'push' # the job will run only if the event type is push 
