--- a/.github/workflows/context.yml
+++ b/.github/workflows/context.yml
@@ -37,7 +37,7 @@ jobs:
         env:
           MATRIX_CONTEXT: ${{ toJSON(matrix) }}
         run: echo "$MATRIX_CONTEXT"
-      - name: make file
+#      - name: make file
 #        run: mkdir testfile2.txt 
 #      - name: List files after checkout
 #        run: |
