--- a/.github/workflows/packer.yml
+++ b/.github/workflows/packer.yml
@@ -13,7 +13,10 @@ jobs:
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v2
-
+      - name: pwd
+        run: pwd
+      - name: list files
+        run: ls ./.github/actions/packer-github-actions
       # fix backwards incompatibilities in template
       #- name: Fix Template
       #  uses: hashicorp/packer-github-actions@master
