--- a/.github/workflows/packer.yml
+++ b/.github/workflows/packer.yml
@@ -16,7 +16,7 @@ jobs:
       - name: pwd
         run: pwd
       - name: list files
-        run: ls ./.github/actions/packer-github-actions
+        run: ls /home/runner/work/github-actions-test/github-actions-test
       # fix backwards incompatibilities in template
       #- name: Fix Template
       #  uses: hashicorp/packer-github-actions@master
