--- a/.github/workflows/packer.yml
+++ b/.github/workflows/packer.yml
@@ -16,7 +16,7 @@ jobs:
       - name: pwd
         run: pwd
       - name: list files
-        run: ls /home/runner/work/github-actions-test/github-actions-test
+        run: ls -a /home/runner/work/github-actions-test/github-actions-test
       # fix backwards incompatibilities in template
       #- name: Fix Template
       #  uses: hashicorp/packer-github-actions@master
@@ -33,7 +33,7 @@ jobs:
 
       # build artifact
       - name: Build Artifact
-        uses: ./.github/actions/packer-github-actions
+        uses: /home/runner/work/github-actions-test/github-actions-test/.github/actions/packer-github-actions
         with:
           command: build
           arguments: "-color=false -on-error=abort"
