--- a/.github/workflows/packer.yml
+++ b/.github/workflows/packer.yml
@@ -15,6 +15,8 @@ jobs:
         uses: actions/checkout@v2
       - name: pwd
         run: pwd
+      - name: list files1
+        run: ls -a /home/runner/work/github-actions-test/github-actions-test/.github
       - name: list files
         run: ls -a /home/runner/work/github-actions-test/github-actions-test/.github/packer-gha
       # fix backwards incompatibilities in template
