--- a/.github/workflows/packer.yml
+++ b/.github/workflows/packer.yml
@@ -16,9 +16,9 @@ jobs:
       - name: pwd
         run: pwd
       - name: list files1
-        run: ls -a /home/runner/work/github-actions-test/github-actions-test/.github
+        run: ls -a /home/runner/work/github-actions-test/github-actions-test/.github/actions
       - name: list files
-        run: ls -a /home/runner/work/github-actions-test/github-actions-test/.github/packer-gha
+        run: ls -a /home/runner/work/github-actions-test/github-actions-test/.github/actions/packer-gha
       # fix backwards incompatibilities in template
       #- name: Fix Template
       #  uses: hashicorp/packer-github-actions@master
