--- a/.github/workflows/packer.yml
+++ b/.github/workflows/packer.yml
@@ -16,7 +16,7 @@ jobs:
       - name: pwd
         run: pwd
       - name: list files1
-        run: ls -a /home/runner/work/github-actions-test/github-actions-test/.github/actions
+        run: ls -a /home/runner/work/github-actions-test/github-actions-test/gha-base-ami/ansible
       - name: list files
         run: ls -a /home/runner/work/github-actions-test/github-actions-test/.github/actions/packer-gha
       # fix backwards incompatibilities in template
