ami bake automation

--- a/.github/workflows/packer.yml
+++ b/.github/workflows/packer.yml
@@ -42,3 +42,6 @@ jobs:
           target: ./gha-base-ami/packer/packer.json
         env:
           PACKER_LOG: 1
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AWS_SESSION_TOKEN: ${{ secrets.AWS_SESSION_TOKEN }}
