--- a/.github/workflows/packer.yml
+++ b/.github/workflows/packer.yml
@@ -7,19 +7,14 @@ on:
 
 jobs:
   packer:
-    runs-on: poc-custom-runner
+    runs-on: ubuntu-latest
     name: packer
- 
+
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v2
-      - name: pwd
-        run: pwd
-      - name: list files1
-        run: ls -a /opt/actions-runner/_work/github-actions-test/github-actions-test/gha-base-ami/ansible
-      - name: list files
-        run: ls -a /opt/actions-runner/_work/github-actions-test/github-actions-test/.github/actions/packer-gha
-      # fix backwards incompatibilities in template
+
+      ## fix backwards incompatibilities in template
       #- name: Fix Template
       #  uses: hashicorp/packer-github-actions@master
       #  with:
@@ -31,17 +26,14 @@ jobs:
       #  with:
       #    command: validate
       #    arguments: -syntax-only
-      #    target: ../gha-base-ami/packer/packer.json
+      #    target: packer.pkr.hcl
 
       # build artifact
       - name: Build Artifact
-        uses: ./.github/actions/packer-gha
+        uses: hashicorp/packer-github-actions@master
         with:
           command: build
           arguments: "-color=false -on-error=abort"
           target: ./gha-base-ami/packer/packer.json
         env:
           PACKER_LOG: 1
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          AWS_SESSION_TOKEN: ${{ secrets.AWS_SESSION_TOKEN }}
