--- a/.github/workflows/packer.yml
+++ b/.github/workflows/packer.yml
@@ -8,14 +8,18 @@ on:
 jobs:
   packer:
     runs-on: poc-custom-runner
-
     name: packer
 
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v2
-
-      ## fix backwards incompatibilities in template
+      - name: pwd
+        run: pwd
+      - name: list files1
+        run: ls -a /opt/actions-runner/_work/github-actions-test/github-actions-test/gha-base-ami/ansible
+      - name: list files
+        run: ls -a /opt/actions-runner/_work/github-actions-test/github-actions-test/.github/actions/packer-gha
+      # fix backwards incompatibilities in template
       #- name: Fix Template
       #  uses: hashicorp/packer-github-actions@master
       #  with:
@@ -27,14 +31,17 @@ jobs:
       #  with:
       #    command: validate
       #    arguments: -syntax-only
-      #    target: packer.pkr.hcl
+      #    target: ../gha-base-ami/packer/packer.json
 
       # build artifact
       - name: Build Artifact
-        uses: hashicorp/packer-github-actions@master
+        uses: ./.github/actions/packer-gha
         with:
           command: build
           arguments: "-color=false -on-error=abort"
           target: ./gha-base-ami/packer/packer.json
         env:
           PACKER_LOG: 1
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AWS_SESSION_TOKEN: ${{ secrets.AWS_SESSION_TOKEN }}
