ami bake automation

--- a/.github/actions/packer-gha/Dockerfile
+++ b/.github/actions/packer-gha/Dockerfile
@@ -2,6 +2,6 @@
 FROM hashicorp/packer:light@sha256:93291f0b3041080b47b065b77309e5c1beee52c6bd691224d21d32e91ec9b562
 COPY "entrypoint.sh" "/entrypoint.sh"
 COPY "gha-base-ami" "/gha-base-ami"
-RUN "ls /gha-base-ami/"
+RUN "ls ./gha-base-ami/"
 
 ENTRYPOINT ["/entrypoint.sh"]
