--- a/.github/actions/packer-gha/Dockerfile
+++ b/.github/actions/packer-gha/Dockerfile
@@ -1,7 +1,9 @@
 # see https://hub.docker.com/r/hashicorp/packer/tags for all available tags
 #FROM hashicorp/packer:light@sha256:93291f0b3041080b47b065b77309e5c1beee52c6bd691224d21d32e91ec9b562
 FROM ubuntu:latest
+
 COPY "entrypoint.sh" "/entrypoint.sh"
 COPY "gha-base-ami" "/gha-base-ami"
+RUN "ls"
 
 ENTRYPOINT ["/entrypoint.sh"]
