--- a/.github/actions/packer-gha/Dockerfile
+++ b/.github/actions/packer-gha/Dockerfile
@@ -4,6 +4,8 @@ FROM ubuntu:latest
 
 COPY "entrypoint.sh" "/entrypoint.sh"
 COPY "gha-base-ami" "/gha-base-ami"
+RUN "ls"
+RUN "pwd"
 RUN "ls gha-base-ami/"
 
 ENTRYPOINT ["/entrypoint.sh"]
